--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.psd filter=lfs diff=lfs merge=lfs -text
 *.To-DoList filter=lfs diff=lfs merge=lfs -text
 node_modules/puppeteer/.local-chromium/** filter=lfs diff=lfs merge=lfs -text
+node_modules/puppeteer/.local-chromium/mac-982053/chrome-mac/Chromium.app/Contents/Frameworks/Chromium[[:space:]]Framework.framework/Versions/101.0.4950.0/Chromium[[:space:]]Framework filter=lfs diff=lfs merge=lfs -text
